fixed: visible bug

--- a/app/static/css/reset_password_error.css
+++ b/app/static/css/reset_password_error.css
@@ -31,13 +31,16 @@ body::after {
     font-family: "Josefin Sans", "Quattrocento Sans", Arial, sans-serif;
     position: relative;
     z-index: 2;
+}
+
+#error-container {
     visibility: hidden;
     opacity: 0;
     transform: translateX(100%);
     transition: all 0.5s ease;
 }
 
-.error-container.visible {
+#error-container.visible {
     visibility: visible;
     opacity: 1;
     transform: translateX(0);
